--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "fetch-cookie": "^2.1.0",
+    "node-fetch": "^3.3.2",
     "puppeteer": "^21.2.1"
   },
   "devDependencies": {
